# ReadingNotes

./: README.md
Dive-into-deep-learning/: pyproject.toml
Dive-into-deep-learning/data/: house_tiny.csv
Dive-into-deep-learning/week-1/: 01-数据操作-数据预处理.ipynb  02-线性代数.ipynb  03-自动求导.ipynb  week-1.md
Dive-into-deep-learning/week-2/: 01-线性回归实现.ipynb  线性回归.md
Dive-into-deep-learning/week-3/: 2-Softmax回归_损失函数_图片分类数据集.ipynb  softmax回归.md
Dive-into-deep-learning/week-4/: 多层感知机.ipynb  感知机.md  模型选择&过拟合&欠拟合.ipynb  模型选择&过拟合&欠拟合.md
MachineLearning/: chapter2-KNN.md  chapter3-DecisionTree.md  chapter4-Bayes.md  chapter5-Logistic回归.md
Pythoncookbook读书笔记/: aoo.txt  第一章 数据结构与算法.py
